fix retain cycle in mars VC

--- a/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -21,12 +20,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-sunrise" translatesAutoresizingMaskIntoConstraints="NO" id="FFZ-kb-ecw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Life on Mars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9km-8z-uEu">
-                                <rect key="frame" x="155" y="570" width="200" height="77"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="QSz-wV-Bay"/>
-                                    <constraint firstAttribute="height" constant="77" id="WUA-vk-LzC"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Life on Mars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9km-8z-uEu">
+                                <rect key="frame" x="161" y="567" width="194" height="60"/>
                                 <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="50"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -36,8 +31,8 @@
                         <constraints>
                             <constraint firstItem="FFZ-kb-ecw" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="05u-Zt-oEm"/>
                             <constraint firstItem="FFZ-kb-ecw" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="47C-vN-p6B"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="9km-8z-uEu" secondAttribute="trailing" id="QcK-AN-saB"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="9km-8z-uEu" secondAttribute="bottom" constant="20" id="VPO-h7-hj2"/>
+                            <constraint firstAttribute="trailing" secondItem="9km-8z-uEu" secondAttribute="trailing" constant="20" id="QcK-AN-saB"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="9km-8z-uEu" secondAttribute="bottom" constant="40" id="VPO-h7-hj2"/>
                             <constraint firstItem="FFZ-kb-ecw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="abO-VG-PR1"/>
                             <constraint firstItem="FFZ-kb-ecw" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zxU-Ni-KCZ"/>
                         </constraints>
